@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.10 2009/08/14 21:19:18 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.11 2009/12/16 02:53:33 pebenito Exp $
+
+*selinux-hal-2.20091215 (16 Dec 2009)
+
+  16 Dec 2009; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-hal-2.20091215.ebuild:
+  New upstream release.
 
   14 Aug 2009; Chris PeBenito <pebenito@gentoo.org>
   -selinux-hal-20070329.ebuild, -selinux-hal-20070928.ebuild,
